src/components/SearchByLocation/search-by-location.scss
@import '../../stylesheets/variables';

.usa-label.keyword-label {
  font-weight: $medium-weight;
}

.search-by-location-section {
  margin: 0rem 0rem 0rem -1rem;
  padding: 0rem 0rem 1.75rem 2.25rem;
  background-color: $light-grey-2;
  .location-search-header {
    margin-top: 1.25rem;
    margin-bottom: 0.5rem;
    color: $nrcs-dark;
    font-weight: $semi-heavy-weight;
    font-size: 17px;
    line-height: 1.3;
  }
  .side-by-side {
    display: flex;
    flex-direction: row;
    gap: 1.875rem;
  }

  .search-labels {
    display: flex;
    align-items: baseline;

    .clear-button {
      color: $dark-grey;
      &.selected {
        color: $link-color;
      }
    }
  }
}

.usa-select {
  &:disabled {
    background-color: $medium-darkgrey;
  }
}

@media only screen and (max-width: $small-screen) {
  .search-by-location-section {
    .side-by-side {
      display: flex;
      flex-direction: column;
      grid-gap: 1.875rem;
      gap: 1.875rem;
      margin-right: 2rem;
    }
  }
}

